syntax = "proto3";
package basictracer_go.wire;
option go_package = "wire";

message TracerState {
  fixed64 trace_id_hi = 1;
  fixed64 trace_id_lo = 2;
  fixed64 span_id = 3;
  bool    sampled = 4;
  map<string, string> baggage_items = 5;
}
